# copypaste

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  ARCHITECTURE.md  AUDIT_FINDINGS.md  AUDIT_FIX_PLAN.md  AUDIT_REPORT.md  CHANGELOG.md  CLOSED_TASK_VERIFICATION_MATRIX.md  CONTRIBUTING.md  Cargo.toml  FEATURE_GAP_REPORT.md  FEATURE_IMPROVEMENT_ROADMAP.md  FEATURE_INVENTORY.md  FIX_ORCHESTRATION_PLAN.md  FIX_SUMMARY.md  INTEGRATION.md  LICENSE-APACHE  MANUAL_QA_CHECKLIST.md  Makefile  PARITY_FIX_SUMMARY.md  PARITY_MATRIX.md  PLATFORM_GAP_REPORT.md  POST_FIX_AUDIT_REPORT.md  PRODUCT_COMPLETENESS_AUDIT.md  README.md  REOPENED_ISSUES.md  SECURITY.md  STATUS.md  STYLEGUIDE.md  VERIFICATION_REPORT.md  cliff.toml  clippy.toml  copypaste-design-reference.html  deny.toml  docker-compose.yml  rust-toolchain.toml
crates/copypaste-android/: Cargo.toml  README.md  build.rs  uniffi.toml
crates/copypaste-android/src/: ffi_cloud_sync.rs  ffi_config.rs  ffi_crypto.rs  ffi_db.rs  ffi_error.rs  ffi_p2p_session.rs  ffi_pairing.rs  ffi_revocation.rs  ffi_sensitive.rs  ffi_system.rs  lib.rs  p2p_listener.rs  pairing.rs  panic_boundary.rs  stun.rs  tests.rs  version.rs
crates/copypaste-android/tests/: aad_key_version_roundtrip.rs  conformance_vectors.rs  uniffi_binding_fields.rs
crates/copypaste-android/uniffi/: copypaste_android.udl
crates/copypaste-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/copypaste-bench/: Cargo.toml  README.md
crates/copypaste-bench/benches/: cli_parse.rs  encryption.rs  hash.rs  ipc_roundtrip.rs  migration.rs  storage.rs  sync.rs
crates/copypaste-bench/src/: lib.rs
crates/copypaste-cli/: Cargo.toml  README.md
crates/copypaste-cli/src/: ipc.rs  main.rs  paths.rs
crates/copypaste-cli/tests/: completions.rs  export_import.rs
crates/copypaste-config/: Cargo.toml  README.md
crates/copypaste-config/src/: error.rs  lib.rs
crates/copypaste-config/tests/: load_save.rs
crates/copypaste-core/: Cargo.toml  README.md
crates/copypaste-core/benches/: crypto.rs  storage.rs
crates/copypaste-core/src/: file.rs  filename_security.rs  image.rs  lib.rs  logging.rs  net.rs  relay.rs  text_kind.rs
crates/copypaste-core/tests/: aead_tamper.rs  concurrent_writers.rs  core_integration.rs  corruption.rs  dedup.rs  encryption_at_rest.rs  false_positive_corpus.rs  fts5_search.rs  fts_ttl_expiry.rs  hkdf_versioning.rs  image_formats.rs  key_version_tests.rs  logging_rotation.rs  logging_rotation_daily.rs  migration.rs  nonce_uniqueness.rs  pool_stress.rs  true_positive_corpus.rs  ts_size_consts_parity.rs  wrong_key_err.rs
crates/copypaste-daemon/: Cargo.toml  README.md  build.rs
crates/copypaste-daemon/src/: app_icon.rs  bandwidth.rs  clipboard.rs  cloud.rs  config.rs  daemon.rs  device_meta.rs  fs_atomic.rs  ipc.rs  ipc_win.rs  keychain.rs  launchd.rs  lib.rs  logging.rs  main.rs  p2p.rs  pairing_sm.rs  paths.rs  peers.rs  protocol.rs  public_ip.rs  relay.rs  sync_common.rs  sync_cursor.rs  sync_in_flight.rs  sync_orch.rs  tray.rs  url_guard.rs
crates/copypaste-daemon/tests/: clipboard.rs  db_stats_ipc.rs  degraded_startup.rs  export_import_roundtrip.rs  frame_consts.rs  harness_single_daemon.rs  health.rs  import_handler.rs  integration_ipc.rs  keychain_acl.rs  keychain_macos.rs  launchd_install.rs  lifecycle.rs  migration_gate_clears.rs  p2p_init.rs  p2p_sync_e2e.rs  pairing_e2e.rs  pairing_network.rs  poison_row_guard.rs  resilience.rs  settings_persistence.rs  sync_in_flight_badge.rs  sync_orch_integration.rs  unpair_propagation.rs  unpair_repair.rs  vacuum_ipc.rs
crates/copypaste-ipc/: Cargo.toml  README.md
crates/copypaste-ipc/src/: backoff.rs  error.rs  lib.rs  methods.rs  paths.rs  request.rs  response.rs  types.rs
crates/copypaste-ipc/tests/: snapshot.rs  wire_roundtrip.rs
crates/copypaste-p2p/: Cargo.toml  README.md
crates/copypaste-p2p/src/: bootstrap.rs  cert.rs  connector.rs  discovery.rs  error.rs  interfaces.rs  lib.rs  pake.rs  rate_limit.rs  transport.rs  verifier.rs
crates/copypaste-p2p/tests/: disconnect.rs  mdns.rs  mdns_rate_limit.rs  network_scan.rs  pake_confirm_tag.rs  pake_roundtrip.rs  tls_mutual.rs
crates/copypaste-relay/: Cargo.toml  README.md
crates/copypaste-relay/src/: auth.rs  config.rs  db.rs  error.rs  governor_cleanup.rs  main.rs  models.rs  quota.rs  retry.rs  state.rs  store.rs  supervise.rs
crates/copypaste-relay/tests/: auth_hardening.rs  cross_device_auth.rs  fanout_multi_device.rs  governor_429.rs  integration.rs  metrics.rs  persistence.rs  pop_verification.rs  rate_limit.rs  sse_subscribe.rs  store_eviction.rs  watermark_header.rs
crates/copypaste-supabase/: Cargo.toml  README.md
crates/copypaste-supabase/src/: account.rs  auth.rs  error.rs  lib.rs  models.rs  protocol.rs  realtime.rs  rest.rs  store.rs
crates/copypaste-supabase/tests/: auth_integration.rs  auth_token_refresh.rs  realtime_subscribe.rs  reconnect_backoff.rs  rls_policies.rs  session_store.rs
crates/copypaste-sync/: Cargo.toml  README.md
crates/copypaste-sync/src/: backoff.rs  clock.rs  engine.rs  inbox.rs  lib.rs  merge.rs  metrics.rs  protocol.rs
crates/copypaste-sync/tests/: conflicts.rs  crdt.rs  engine_security.rs  handshake.rs  lamport.rs  protocol_version.rs
crates/copypaste-telemetry/: Cargo.toml  README.md
crates/copypaste-telemetry/src/: error.rs  lib.rs  scrubber.rs
crates/copypaste-telemetry/tests/: opt_out.rs  pii_scrubber.rs  sentry_backend.rs  serde_contract.rs
crates/copypaste-ui/: .gitignore  Cargo.toml  PERF-BASELINE.md  README.md  build.rs  eslint.config.js  index.html  package.json  playwright.config.ts  playwright.dev-drive.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  popup.html  tailwind.config.js  vite-plugin-daemon-bridge.ts  vite.config.ts  vitest.config.ts
crates/copypaste-ui-snapshot/: Cargo.toml  build.rs
crates/copypaste-ui-snapshot/src/: lib.rs  main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: aead_decrypt.rs  chunks_from_blob.rs  image_decode.rs  ipc_protocol_parse.rs  sensitive_detect.rs  snapshot_parse.rs  sync_event_decode.rs
(+1492 files in other folders)
