[workspace]
resolver = "2"
members = [
    "crates/copypaste-core",
    "crates/copypaste-daemon",
    "crates/copypaste-cli",
    "crates/copypaste-relay",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["CopyPaste"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
hex = "0.4"
# Storage
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "backup"] }
# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Patterns
regex = "1.10"
# Logging
tracing = "0.1"
# Errors
thiserror = "1"
# Misc
# Pin to <1.21 to stay on getrandom 0.3 (Rust 1.75 compatible; 1.21+ needs getrandom 0.4 / Rust 1.85)
uuid = { version = ">=1.0, <1.21", features = ["v4"] }
# Async runtime
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "signal", "sync", "time"] }
# Serialization
serde_json = "1"
# macOS clipboard
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
objc2-app-kit = { version = "0.2", features = ["NSPasteboard"] }
# macOS Keychain
security-framework = "2"
# Logging subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# home dir (pinned <0.5.10 to avoid edition2024 requirement on Rust 1.75)
home = "=0.5.9"
# error handling
anyhow = "1"
# CLI argument parsing (pin <4.5.40 to stay below edition2024 dep chain on Rust 1.75)
clap = { version = ">=4.0, <4.5.40", features = ["derive"] }
# Base64 encoding
base64 = "0.22"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
