[workspace]
resolver = "2"
members = [
    "crates/copypaste-core",
    "crates/copypaste-daemon",
    "crates/copypaste-cli",
    "crates/copypaste-relay",
    "crates/copypaste-p2p",
    "crates/copypaste-sync",
    "crates/copypaste-supabase",
    "crates/copypaste-android",
    "crates/copypaste-ui",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.75"
authors = ["CopyPaste"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
hex = "0.4"
# P2P TLS (pinned together to keep ring crypto provider consistent)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rcgen = { version = "0.12", default-features = false, features = ["ring"] }
# mDNS-SD service discovery
mdns-sd = "0.19"
# Storage
rusqlite = { version = "0.31", features = ["bundled-sqlcipher", "backup"] }
# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Patterns
regex = "1.10"
# Logging
tracing = "0.1"
# Errors
thiserror = "1"
# Misc
# Pin to <1.21 to stay on getrandom 0.3 (Rust 1.75 compatible; 1.21+ needs getrandom 0.4 / Rust 1.85)
uuid = { version = ">=1.0, <1.21", features = ["v4"] }
# Async runtime
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "signal", "sync", "time"] }
# Serialization
serde_json = "1"
# Image processing
image = { version = "0.24", default-features = false, features = ["png", "tiff"] }
# macOS clipboard
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSData"] }
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSPasteboardItem"] }
# macOS Keychain
security-framework = "2"
# Logging subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Rotating file appender for daemon logs
tracing-appender = "0.2"
# home dir (pinned <0.5.10 to avoid edition2024 requirement on Rust 1.75)
home = "=0.5.9"
# platform config / data dirs
dirs = "5"
# error handling
anyhow = "1"
# CLI argument parsing (pin <4.5.40 to stay below edition2024 dep chain on Rust 1.75)
clap = { version = ">=4.0, <4.5.40", features = ["derive"] }
# Base64 encoding
base64 = "0.22"
# HTTP client (pin <0.12 to stay on rustls/hyper compatible with Rust 1.75)
reqwest = { version = ">=0.11, <0.12", default-features = false, features = ["json", "rustls-tls"] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# WebSocket (pinned <=0.23 to remain compatible with Rust 1.75 / tokio 1.x)
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
# Async stream combinators
futures-util = "0.3"
# Slint GUI toolkit (1.8 required for export re-export and modern syntax)
slint = "=1.8.0"
slint-build = "=1.8.0"
