[workspace]
resolver = "2"
members = [
    "crates/copypaste-core",
    "crates/copypaste-daemon",
    "crates/copypaste-cli",
    "crates/copypaste-relay",
    "crates/copypaste-p2p",
    "crates/copypaste-sync",
    "crates/copypaste-supabase",
    "crates/copypaste-android",
    "crates/copypaste-ui",
    "crates/copypaste-ipc",
    "crates/copypaste-config",
    "crates/copypaste-bench",
    "crates/copypaste-telemetry",
]

[workspace.package]
version = "0.2.0-beta.6"
edition = "2021"
# Metadata only — we follow stable (see rust-toolchain.toml). 1.89 is the
# current Cargo.lock-implied floor (smol_str 0.3.6). Bump when lockfile bumps.
rust-version = "1.89"
authors = ["CopyPaste"]
license = "MIT OR Apache-2.0"
description = "Encrypted clipboard manager for macOS/Android/Windows"
repository = "https://github.com/dmytro/CopyPaste"

[workspace.dependencies]
# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
hex = "0.4"
# P2P TLS (pinned together to keep ring crypto provider consistent)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rcgen = { version = "0.12", default-features = false, features = ["ring"] }
# mDNS-SD service discovery
mdns-sd = "0.19"
# Storage
rusqlite = { version = "0.32", features = ["bundled-sqlcipher", "backup"] }
# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Patterns
regex = "1.10"
# Unicode normalisation (NFKC for sensitive-detector bypass guards)
unicode-normalization = "0.1"
# Logging
tracing = "0.1"
# Errors
thiserror = "1"
# Misc
# Pin to <1.21 retained for now; MSRV bumped to 1.86 (getrandom 0.4 OK), relax post-beta.
uuid = { version = ">=1.0, <1.21", features = ["v4"] }
# Async runtime
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "signal", "sync", "time"] }
# Serialization
serde_json = "1"
# Image processing
# Pin >=0.25, <0.25.10 — 0.25.10 requires Rust 1.88 (MSRV is 1.86). 0.25.x fixes CVEs in 0.24.
# Transitive `tiff` crate moves from 0.9 → 0.11 (also CVE-fixed).
image = { version = ">=0.25, <0.25.10", default-features = false, features = ["png", "tiff"] }
# macOS clipboard
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSData"] }
objc2-app-kit = { version = "0.2", features = ["NSPasteboard", "NSPasteboardItem"] }
# macOS Keychain
security-framework = "2"
# Logging subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Rotating file appender for daemon logs
tracing-appender = "0.2"
# home dir (pin retained from Rust 1.75 era; safe to relax post-beta now MSRV=1.86)
home = "=0.5.9"
# platform config / data dirs
dirs = "5"
# error handling
anyhow = "1"
# CLI argument parsing (pin retained; relax post-beta now MSRV=1.86 supports edition2024)
clap = { version = ">=4.0, <4.5.40", features = ["derive"] }
# Base64 encoding
base64 = "0.22"
# HTTP client. Old `<0.12` ceiling dropped now we follow stable. 0.12 pulls
# rustls 0.23 + rustls-webpki 0.103 (closes RUSTSEC-2026-0098/0099/0104).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# WebSocket (pinned <=0.23 for tokio 1.x API stability; MSRV=1.86)
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
# Async stream combinators
futures-util = "0.3"
# Slint GUI toolkit (1.8 required for export re-export and modern syntax)
slint = "=1.8.0"
slint-build = "=1.8.0"

# ---- Release profiles (beta-bonus: strip + fat LTO + panic=abort) -----------
# release: smallest fast binary for distribution. fat LTO + 1 codegen unit
# maximises optimisation across crates; strip drops debug symbols; panic=abort
# removes unwinding tables. ~30-40% smaller binaries vs default release.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# release-size: same as release but optimises for size (opt-level=z) instead of speed.
# Use when binary footprint matters more than throughput (e.g. mobile, embedded).
[profile.release-size]
inherits = "release"
opt-level = "z"
