[package]
name = "copypaste-android"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Android JNI/UniFFI bindings for CopyPaste core"

[lib]
crate-type = ["cdylib"]
name = "copypaste_android"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []
# When enabled, `add_clipboard_item` and `get_history_count` perform real
# end-to-end DB I/O via copypaste-core. When disabled (default), they return
# stub values so the .so can be built without bundling the storage stack
# (useful for early CI smoke builds).
android-uniffi-live = []

[dependencies]
copypaste-core = { path = "../copypaste-core" }
uniffi = { version = "0.27", features = ["bindgen", "cli"] }
thiserror = "1"
# v0.3: needed by `add_clipboard_item` to pre-generate the item_id that's
# bound into the AEAD AAD before encryption (legacy empty-AAD fallback was
# removed in 1c55e57).
uuid = { workspace = true }

# Android NDK has no system OpenSSL, so sqlcipher's `#include <openssl/crypto.h>`
# fails at compile time on aarch64-linux-android / x86_64-linux-android. Pull in
# rusqlite with `bundled-sqlcipher-vendored-openssl` so OpenSSL is vendored and
# built alongside sqlcipher in-tree. Resolver v2 keeps this feature confined to
# Android builds — desktop targets keep using the workspace's plain
# `bundled-sqlcipher` (system openssl on macOS via security-framework, etc.).
[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }

[dev-dependencies]
# Pin below 3.14 — tempfile ≥3.14 pulls getrandom 0.4 which requires Rust 1.85+
tempfile = ">=3.0, <3.14"
