[package]
name = "copypaste-android"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Android JNI/UniFFI bindings for CopyPaste core"

[lib]
# `cdylib` is the Android .so artifact; `lib` (rlib) is added so the
# cross-language conformance generator (tests/conformance_vectors.rs) — and any
# future host-side integration test — can `use copypaste_android::…` to call the
# exact FFI functions the Kotlin bindings invoke. The rlib does not affect the
# Android cdylib build (cargo-ndk still emits libcopypaste_android.so).
crate-type = ["cdylib", "lib"]
name = "copypaste_android"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []
# When enabled, `add_clipboard_item` and `get_history_count` perform real
# end-to-end DB I/O via copypaste-core. When disabled (default), they return
# stub values so the .so can be built without bundling the storage stack
# (useful for early CI smoke builds).
android-uniffi-live = []

[dependencies]
copypaste-core = { path = "../copypaste-core" }
# P2P FFI foundation: Android drives the SAME Rust P2P stack (cert gen +
# bootstrap PAKE pairing) through UniFFI rather than reimplementing it in
# Kotlin. See bootstrap_pair_initiator / generate_device_cert below.
copypaste-p2p = { path = "../copypaste-p2p" }
# Sync engine + wire protocol: `sync_with_peer` drives the SAME transport-agnostic
# `SyncEngine::run_session` the desktop sync uses, over the mTLS stream.
copypaste-sync = { path = "../copypaste-sync" }
# Long-lived runtime for the (synchronous) FFI wrappers that block on the
# async bootstrap pairing. Multi-thread RT is required because the loopback
# bootstrap test (and real pairing) drives concurrent TLS read/write tasks.
tokio = { workspace = true }
uniffi = { version = "0.27", features = ["bindgen", "cli"] }
thiserror = "1"
# Stack-local key copies are wrapped in Zeroizing so they are scrubbed on
# scope exit, matching the project's "no lingering key material" convention.
zeroize.workspace = true
# v0.3: needed by `add_clipboard_item` to pre-generate the item_id that's
# bound into the AEAD AAD before encryption (legacy empty-AAD fallback was
# removed in 1c55e57).
uuid = { workspace = true }
# `sync_with_peer` speaks the daemon's framed P2P wire protocol directly:
# length-delimited frames each carrying a JSON-serialised `WireItem`. These
# mirror the exact deps the daemon's `run_peer_connection` uses (p2p.rs).
futures-util = { workspace = true, features = ["sink"] }
# `codec` for the length-delimited framing; `rt` for `CancellationToken`,
# which the inbound P2P listener (`p2p_listener.rs`) uses to drive a graceful
# `select!`-based shutdown of its accept loop (mirrors the daemon's accept_loop,
# which likewise enables tokio-util `rt` for the same type).
tokio-util = { version = "0.7", features = ["codec", "rt"] }
bytes = "1"
serde_json = { workspace = true }
# Standard base64 for the relay registration public-key (`relay_public_key_b64`).
# Matches the daemon's `base64::engine::general_purpose::STANDARD` encoding so
# both platforms present the byte-identical `public_key_b64` at registration.
base64.workspace = true

# Android NDK has no system OpenSSL, so sqlcipher's `#include <openssl/crypto.h>`
# fails at compile time on aarch64-linux-android / x86_64-linux-android. Pull in
# rusqlite with `bundled-sqlcipher-vendored-openssl` so OpenSSL is vendored and
# built alongside sqlcipher in-tree. Resolver v2 keeps this feature confined to
# Android builds — desktop targets keep using the workspace's plain
# `bundled-sqlcipher` (system openssl on macOS via security-framework, etc.).
[target.'cfg(target_os = "android")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }

[build-dependencies]
uniffi = { version = "0.27", features = ["build"] }

[dev-dependencies]
# Pin below 3.14 — tempfile ≥3.14 pulls getrandom 0.4 which requires Rust 1.85+
tempfile = ">=3.0, <3.14"
# Cross-language conformance fixture (tests/conformance_vectors.rs): emit golden
# AEAD vectors as JSON for the Kotlin instrumented test to consume. (serde_json
# is now also a normal dependency — used by `sync_with_peer`'s framed protocol.)
# External KAT test (external_kat_xchacha20poly1305_cfrg_draft_vector): drive the
# raw XChaCha20-Poly1305 AEAD directly with the CFRG fixed nonce so we can verify
# the primitive independently of our encrypt_item_with_aad AAD-binding wrapper.
# Matches the workspace version in the root Cargo.toml.
chacha20poly1305 = { workspace = true }
