[package]
name = "copypaste-bench"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Beta-bonus criterion benchmark harness for CopyPaste"

[dependencies]

[dev-dependencies]
copypaste-core = { path = "../copypaste-core" }
copypaste-ipc = { path = "../copypaste-ipc" }
copypaste-sync = { path = "../copypaste-sync" }
clap = { workspace = true, features = ["derive"] }
criterion.workspace = true
serde_json.workspace = true
sha2.workspace = true
# getrandom 0.4 (pulled by tempfile ≥3.14) requires Rust 1.85; safe at MSRV 1.89. Pin removed 2026-06-14.
tempfile = "3"

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "storage"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "sync"
harness = false

[[bench]]
name = "ipc_roundtrip"
harness = false

[[bench]]
name = "cli_parse"
harness = false
