[package]
name = "copypaste-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "copypaste"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
home.workspace = true
copypaste-ipc = { path = "../copypaste-ipc" }
# QR rendering for `copypaste pair-qr` (terminal block art).
qrcode.workspace = true
# Zeroize: used by `commands/cloud.rs` to wipe passwords/keys on drop.
zeroize = { workspace = true }
# In-process no-echo password prompt for `commands/cloud.rs`; handles
# SIGINT and terminal restore.
rpassword = "7"
# copypaste-core is intentionally NOT listed here. All CLI subcommands
# (including `vacuum`) route through the daemon's Unix-socket IPC only.
# See crates/copypaste-cli/src/commands/vacuum.rs and the IPC verb
# METHOD_VACUUM for the implementation.

[target.'cfg(target_os = "macos")'.dependencies]
# Used by `commands/cloud.rs` to store the Supabase anon-key in the macOS
# Keychain. NOT used for the `vacuum` command (daemon owns that path now).
security-framework.workspace = true

[dev-dependencies]
# Pin below 3.14 — tempfile ≥3.14 pulls getrandom 0.4 which requires Rust 1.85+
# (our MSRV is 1.89 so this is already satisfied, but the pin keeps the
# lock consistent with copypaste-core and avoids an accidental bump).
tempfile = ">=3.0, <3.14"
