[package]
name = "copypaste-cli"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "copypaste"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
home.workspace = true
copypaste-ipc = { path = "../copypaste-ipc" }
# QR rendering for `copypaste pair-qr` (terminal block art).
qrcode.workspace = true
# Zeroize: used by `commands/cloud.rs` to wipe passwords/keys on drop.
zeroize = { workspace = true }
# In-process no-echo password prompt for `commands/cloud.rs`; handles
# SIGINT and terminal restore.
rpassword = "7"
# copypaste-core is intentionally NOT listed here. All CLI subcommands
# (including `vacuum`) route through the daemon's Unix-socket IPC only.
# See crates/copypaste-cli/src/commands/vacuum.rs and the IPC verb
# METHOD_VACUUM for the implementation.

# P1-6 fix: security-framework dep removed from CLI. The daemon is now the sole
# Keychain writer; the CLI sends the Supabase password over the 0600 unix
# socket IPC (set_config) and the daemon stores it in the Keychain.

[dev-dependencies]
# getrandom 0.4 (pulled by tempfile ≥3.14) requires Rust 1.85; safe at MSRV 1.96. Pin removed 2026-06-14.
tempfile = "3"
