[package]
name = "copypaste-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified runtime AppConfig (paths, ports, log level) for CopyPaste daemon/cli/relay/ui"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# `directories` is requested by the unified-appconfig spec; pin <6 to stay on Rust 1.75-friendly deps.
directories = ">=5, <7"

[dev-dependencies]
tempfile = "3"
