[package]
name = "copypaste-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
zeroize.workspace = true
rand.workspace = true
hex.workspace = true
rusqlite.workspace = true
r2d2 = "0.8"
r2d2_sqlite = { version = "0.25", default-features = false, features = ["bundled-sqlcipher"] }
serde.workspace = true
toml.workspace = true
regex.workspace = true
unicode-normalization.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
# Beta-bonus (daemon-log-rotation): daily-rotating file appender with non-blocking
# writer.  Pinned crate-local (NOT workspace) to avoid concurrent edits of root
# Cargo.toml by other beta-bonus workers; version stays in sync with workspace.
tracing-appender = "0.2"
thiserror.workspace = true
uuid.workspace = true
image.workspace = true

[dev-dependencies]
# Pin below 3.14 — tempfile ≥3.14 pulls getrandom 0.4 which requires Rust 1.85+
tempfile = ">=3.0, <3.14"
criterion.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
hkdf.workspace = true
sha2.workspace = true
# Extra image format decoders enabled only for the test binary (feature
# unification keeps these out of prod builds because production `image`
# dep above is pinned to ["png", "tiff"]). Used by tests/image_formats.rs
# to round-trip JPEG / GIF synthetic fixtures.
image = { version = ">=0.25, <0.25.10", default-features = false, features = ["png", "tiff", "jpeg", "gif"] }
serde_json.workspace = true

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "storage"
harness = false
