[package]
name = "copypaste-core"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]

[features]
# Expose unencrypted Database::open_in_memory / open_in_memory_with_cache_mb
# for use in tests in OTHER crates (copypaste-daemon, copypaste-sync, etc.).
# Never enable in production builds — these functions create unencrypted DBs.
# Within copypaste-core itself the functions are always available under #[cfg(test)].
# (CopyPaste-9vcn)
test-helpers = []

[dependencies]
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
# Argon2id for passphrase-derived shared sync key (cross-device cloud encryption).
# Version 0.5 is already in the workspace Cargo.lock (via copypaste-p2p / opaque-ke).
# default-features = false avoids pulling in std-only password_hash formatting;
# we only need the raw KDF output via hash_password_into.
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
hkdf.workspace = true
sha2.workspace = true
hmac.workspace = true
zeroize.workspace = true
rand.workspace = true
hex.workspace = true
rusqlite.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
unicode-normalization.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
image.workspace = true
# QR pairing payload: base64url field encoding + constant-time token compare.
# Both are already in the workspace Cargo.lock via other crates.
base64.workspace = true
subtle.workspace = true

[dev-dependencies]
# CopyPaste-9vcn: enable test-helpers for integration tests (tests/ dir) and
# benchmarks that need Database::open_in_memory. The feature gate prevents
# production binaries from calling the unencrypted constructor.
copypaste-core = { path = ".", features = ["test-helpers"] }
# tracing-subscriber + tracing-appender are dev-deps only in copypaste-core.
# Production subscriber init lives in the binary crates (copypaste-daemon, etc.).
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
# getrandom 0.4 (pulled by tempfile ≥3.14) requires Rust 1.85; safe at MSRV 1.96. Pin removed 2026-06-14.
tempfile = "3"
criterion.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
hkdf.workspace = true
sha2.workspace = true
# Extra image format decoders enabled only for the test binary (feature
# unification keeps these out of prod builds because production `image`
# dep above is pinned to ["png", "tiff"]). Used by tests/image_formats.rs
# to round-trip JPEG / GIF synthetic fixtures.
image = { version = ">=0.25", default-features = false, features = ["png", "tiff", "jpeg", "gif"] }
serde_json.workspace = true
# Audit HIGH #1 (encrypt.rs): env-var-mutating tests for the legacy
# empty-AAD fallback MUST serialise — concurrent env::set_var on different
# threads triggers torn reads / UB. Pure-Rust, only built for `cargo test`.
serial_test = "3"

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "storage"
harness = false
