[package]
name = "copypaste-daemon"
version.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "copypaste_daemon"
path = "src/lib.rs"

[[bin]]
name = "copypaste-daemon"
path = "src/main.rs"

[features]
# Enables Supabase cloud sync (requires SUPABASE_URL + SUPABASE_ANON_KEY env vars at runtime).
cloud-sync = ["reqwest", "copypaste-supabase"]

[dependencies]
copypaste-core = { path = "../copypaste-core" }
# Beta W2.1 (arch-1): real P2P stack — mDNS-SD discovery + mTLS transport.
copypaste-p2p = { path = "../copypaste-p2p" }
# Beta W2.2 (arch-1): sync engine + protocol types used by sync_orch.rs.
copypaste-sync = { path = "../copypaste-sync" }
tokio.workspace = true
# D1-D5 graceful shutdown: CancellationToken coordinates across IPC/sync/P2P tasks.
# Already a transitive dep (0.7.x) — pinned here so the feature set is explicit.
tokio-util = { version = "0.7", features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
home.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
uuid.workspace = true
rusqlite.workspace = true
# cloud-sync feature: HTTP client for Supabase REST + Realtime, base64 encoding
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
# base64 is also required unconditionally for the `import` IPC method
# (CLI sends content bytes as base64-encoded strings to keep the wire JSON-safe).
base64 = { version = "0.22" }
# Beta W2.3 (arch-1): canonical Supabase client (auth + realtime).
copypaste-supabase = { path = "../copypaste-supabase", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
objc2-app-kit.workspace = true
security-framework.workspace = true
# v0.3 Keychain ACL (THREAT-MODEL OI-4): security-framework 2.x does not bind
# SecAccessCreate / SecTrustedApplicationCreateFromPath / SecKeychainItem*,
# so the ACL layer in src/keychain/acl.rs drops to raw FFI and needs the
# CFString / CFArray / CFData wrappers shipped by core-foundation 0.9.
#
# Beta-merge audit HIGH #2: keychain.rs also hand-builds SecItemAdd with
# kSecAttrAccessControl + kSecAttrSynchronizable=false (security-framework
# 2.x has no high-level wrapper for accessibility on generic_password).
# All FFI deps are already transitive via security-framework — pinning
# them as direct deps so the FFI calls compile against a stable range.
core-foundation = "0.9"
core-foundation-sys = "0.8"
security-framework-sys = "2"
# Beta-merge audit MED #4: read-path Vec<u8> from get_generic_password is
# wrapped in Zeroizing so the heap buffer holding the device secret is
# scrubbed the moment it falls out of scope.
zeroize = { version = "1.7", features = ["derive"] }
# tray-icon + png moved to copypaste-ui::tray_host (the daemon process
# is launched by launchd and cannot host an NSApplication main run loop on
# macOS, which tray-icon / muda::Menu both require).

[[test]]
name = "integration_ipc"
path = "tests/integration_ipc.rs"

[[test]]
name = "lifecycle"
path = "tests/lifecycle.rs"

# Beta-bonus: sync orchestrator contract tests (channel close → shutdown, merge handler).
[[test]]
name = "sync_orch_integration"
path = "tests/sync_orch_integration.rs"

# Beta-bonus: P2P init contract tests (discovery + transport construction, clean drop).
[[test]]
name = "p2p_init"
path = "tests/p2p_init.rs"

[[test]]
name = "keychain_macos"
path = "tests/keychain_macos.rs"

# v0.3 (THREAT-MODEL OI-4): Keychain ACL enforcement smoke tests.  Gated to
# macOS at the source level; all tests are `#[ignore]` because they mutate
# the user's real login keychain (no in-memory shim exists for SecAccess*).
[[test]]
name = "keychain_acl"
path = "tests/keychain_acl.rs"

# Beta-bonus: IPC status/health endpoint tests (version, monotonic uptime
# proxy, history count via stats, daemon-not-running typed error, throughput
# sanity). See module docs in tests/health.rs for the full contract list.
[[test]]
name = "health"
path = "tests/health.rs"

# Beta-bonus: launchd LaunchAgent plist install/uninstall tests (macOS only).
# See module docs in tests/launchd_install.rs for the "how is launchctl mocked"
# strategy (file-write half reproduced inline, error path triggered via bogus
# $HOME so no real launchd registration ever occurs).
[[test]]
name = "launchd_install"
path = "tests/launchd_install.rs"

# Beta-bonus: end-to-end pairing flow tests — mDNS discovery + PAKE handshake +
# mutual PairedPeers trust. See module docs in tests/pairing_e2e.rs.
[[test]]
name = "pairing_e2e"
path = "tests/pairing_e2e.rs"

# Beta `daemon-import`: tests for the `import` IPC method (insert, dedupe,
# empty input, malformed base64). See module docs in tests/import_handler.rs.
[[test]]
name = "import_handler"
path = "tests/import_handler.rs"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
# Beta-bonus integration tests need direct access to the sync engine + P2P public APIs
# because copypaste-daemon is a binary-only crate (no lib.rs).  See module docs in
# tests/sync_orch_integration.rs and tests/p2p_init.rs for the full gap analysis.
copypaste-sync = { path = "../copypaste-sync" }
copypaste-p2p = { path = "../copypaste-p2p" }
# mockito 0.31 supports Rust 1.75 and doesn't require edition 2024 deps;
# used by cloud.rs Wave 2.7 tests (401/429/transient retry paths). These
# tests live under `#[cfg(all(test, feature = "cloud-sync"))]`, so this dep
# is only pulled in when the feature is built.
mockito = "0.31"
# Beta-bonus keychain tests — serialize Keychain Services access (process-global).
# Cross-platform crate; gated at test level via `#[cfg(target_os = "macos")]`.
serial_test = "3"
# Beta-bonus pairing-e2e tests need a raw mDNS daemon with per-test unique
# service types (DiscoveryService hard-codes `_copypaste._tcp.local.`).
mdns-sd = { workspace = true }

# Beta-bonus keychain tests need direct access to set/get/delete primitives
# (the wrapper uses a hardcoded SERVICE/ACCOUNT so tests use unique account
# names to avoid clobbering the user's real device key entry).
[target.'cfg(target_os = "macos")'.dev-dependencies]
security-framework.workspace = true
